# synthlen-khmer

./: .gitattributes  .gitignore  README.md  build_w.txt  index.html  mac-install.sh  manifest.json  package-lock.json  package.json  sample-scanner.html  server.js  synthlen-khmer.html
.github/workflows/: build-macos.yml  build-windows.yml
Pai Ek/: Phi_juom_klang.dr8
Pai Pork Toch/: Phi_juom_noy.dr8
Rorneat Ek/: ranad_ek_hard_Single.dr8
Tro sau/: UI UX Desing.dr8
Tror Ou/: sor_U_1.dr8
klui touch/: klui_lip.dr8
vst/: BUILD.md  CMakeLists.txt  SynthlenKhmer.banks.part1  SynthlenKhmer.banks.part2  bundle-banks.ps1  bundle-ui.ps1  bundle-ui.sh  check-banks.ps1  cmake_cfg.txt  pack-banks.ps1  pack-banks.sh
vst/Source/: Licensing.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEngine.h
vst/installer/: README-mac.md  README.md  build-exe-installer.ps1  build-installer.ps1  build-mac-installer.sh  full-installer.iss  install-full.ps1  install-presets.ps1  preset-pack.iss
vst/installer/scripts/: postinstall
