cmake_minimum_required(VERSION 3.22)

project(SynthlenKhmer VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ---------------------------------------------------------------------------
# Fetch JUCE 8 (has mature WebBrowserComponent / WebView2 integration)
# ---------------------------------------------------------------------------
include(FetchContent)
FetchContent_Declare(
    JUCE
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG        8.0.4
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(JUCE)

# ---------------------------------------------------------------------------
# Fetch the Microsoft WebView2 SDK (NuGet .nupkg = zip) - provides WebView2.h
# needed by JUCE's WebBrowserComponent on Windows.
# ---------------------------------------------------------------------------
if(WIN32)
    FetchContent_Declare(
        webview2
        URL https://www.nuget.org/api/v2/package/Microsoft.Web.WebView2/1.0.2792.45
        DOWNLOAD_EXTRACT_TIMESTAMP TRUE
    )
    FetchContent_MakeAvailable(webview2)
    set(WEBVIEW2_DIR "${webview2_SOURCE_DIR}/build/native")
endif()

# ---------------------------------------------------------------------------
# Plugin target
# ---------------------------------------------------------------------------
juce_add_plugin(SynthlenKhmer
    COMPANY_NAME            "Synthlen"
    PLUGIN_MANUFACTURER_CODE Synl
    PLUGIN_CODE             Sykh
    FORMATS                 VST3 Standalone
    PRODUCT_NAME            "Synthlen Khmer"
    IS_SYNTH                TRUE
    NEEDS_MIDI_INPUT        TRUE
    NEEDS_MIDI_OUTPUT       FALSE
    IS_MIDI_EFFECT          FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS TRUE
    NEEDS_WEB_BROWSER       TRUE          # enables WebView2 on Windows
    COPY_PLUGIN_AFTER_BUILD FALSE         # set TRUE only when building as admin
)

# Generate JUCE header
juce_generate_juce_header(SynthlenKhmer)

# WebView2 SDK headers + static loader (Windows only).
if(WIN32)
    target_include_directories(SynthlenKhmer PRIVATE "${WEBVIEW2_DIR}/include")
    target_link_libraries(SynthlenKhmer PRIVATE "${WEBVIEW2_DIR}/x64/WebView2LoaderStatic.lib")
endif()

target_sources(SynthlenKhmer PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
    Source/PluginProcessor.h
    Source/PluginEditor.h
    Source/SamplerEngine.h
)

target_compile_definitions(SynthlenKhmer PUBLIC
    JUCE_WEB_BROWSER=1
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
    DONT_SET_USING_JUCE_NAMESPACE=0
)

# WebView2 is Windows-only; macOS uses WebKit via JUCE automatically.
if(WIN32)
    target_compile_definitions(SynthlenKhmer PUBLIC JUCE_USE_WIN_WEBVIEW2=1)
endif()

# ---------------------------------------------------------------------------
# Copy the JUCE WebView frontend JS helper module into ui/js/juce so the HTML
# can `import` it (slider/toggle relays + native function bindings).
# Done at configure time so the files are picked up by the glob below.
# ---------------------------------------------------------------------------
set(JUCE_JS_SRC "${juce_SOURCE_DIR}/modules/juce_gui_extra/native/javascript")
if(EXISTS "${JUCE_JS_SRC}")
    file(COPY "${JUCE_JS_SRC}/" DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/ui/js/juce")
    message(STATUS "Copied JUCE frontend JS into ui/js/juce")
else()
    message(WARNING "JUCE frontend JS not found at ${JUCE_JS_SRC}")
endif()

# ---------------------------------------------------------------------------
# Embed the web UI (html + images + js) as binary data
# The ui/ folder is generated by the bundle script (see BUILD.md).
# ---------------------------------------------------------------------------
file(GLOB_RECURSE WEB_UI_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ui/*")
if(WEB_UI_FILES)
    juce_add_binary_data(SynthlenKhmerUI SOURCES ${WEB_UI_FILES})
    target_link_libraries(SynthlenKhmer PRIVATE SynthlenKhmerUI)
    target_compile_definitions(SynthlenKhmer PUBLIC HAS_WEB_UI=1)
else()
    target_compile_definitions(SynthlenKhmer PUBLIC HAS_WEB_UI=0)
endif()

# ---------------------------------------------------------------------------
# Embed sound-bank samples as binary data (namespace BankData).
# `banks/<Preset>/*.wav` are flattened by bundle-banks.ps1 into
# `banks_flat/<PresetNoSpaces>__<file>.wav` which is globbed here.
# ---------------------------------------------------------------------------
file(GLOB BANK_FILES "${CMAKE_CURRENT_SOURCE_DIR}/banks_flat/*")
if(BANK_FILES)
    juce_add_binary_data(SynthlenKhmerBanks
        NAMESPACE   BankData
        HEADER_NAME BankData.h
        SOURCES     ${BANK_FILES})
    target_link_libraries(SynthlenKhmer PRIVATE SynthlenKhmerBanks)
    message(STATUS "Embedded sound banks: ${BANK_FILES}")
else()
    message(STATUS "No sound banks found (banks_flat/ empty) - plugin will be silent until samples are added")
endif()

target_link_libraries(SynthlenKhmer PRIVATE
    juce::juce_audio_utils
    juce::juce_audio_processors
    juce::juce_dsp
    juce::juce_gui_extra
    juce::juce_cryptography
    PUBLIC
    juce::juce_recommended_config_flags
    juce::juce_recommended_lto_flags
    juce::juce_recommended_warning_flags
)

# ---------------------------------------------------------------------------
# Bundle the encrypted sound-bank pack (SynthlenKhmer.banks) WITH the plugin.
# After each build, copy the pack into:
#   - the VST3 bundle:  <name>.vst3/Contents/Resources/SynthlenKhmer.banks
#   - the Standalone dir next to the .exe / .app
# so the bank always travels with the plugin (one install, no extra download).
# ---------------------------------------------------------------------------
set(BANK_PACK "${CMAKE_CURRENT_SOURCE_DIR}/SynthlenKhmer.banks")
if(EXISTS "${BANK_PACK}")
    message(STATUS "Found bank pack, will bundle with plugin: ${BANK_PACK}")

    # --- VST3: copy into Contents/Resources of the built .vst3 bundle ---
    if(TARGET SynthlenKhmer_VST3)
        add_custom_command(TARGET SynthlenKhmer_VST3 POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E make_directory
                "$<TARGET_FILE_DIR:SynthlenKhmer_VST3>/../Resources"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${BANK_PACK}"
                "$<TARGET_FILE_DIR:SynthlenKhmer_VST3>/../Resources/SynthlenKhmer.banks"
            COMMENT "Bundling SynthlenKhmer.banks into VST3 Resources")
    endif()

    # --- Standalone: copy next to the executable (Windows) or Resources (macOS) ---
    if(TARGET SynthlenKhmer_Standalone)
        if(APPLE)
            # macOS: put in Contents/Resources to avoid codesign issues
            add_custom_command(TARGET SynthlenKhmer_Standalone POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E make_directory
                    "$<TARGET_FILE_DIR:SynthlenKhmer_Standalone>/../Resources"
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                    "${BANK_PACK}"
                    "$<TARGET_FILE_DIR:SynthlenKhmer_Standalone>/../Resources/SynthlenKhmer.banks"
                COMMENT "Bundling SynthlenKhmer.banks into Standalone Resources")
        else()
            # Windows: put next to .exe
            add_custom_command(TARGET SynthlenKhmer_Standalone POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                    "${BANK_PACK}"
                    "$<TARGET_FILE_DIR:SynthlenKhmer_Standalone>/SynthlenKhmer.banks"
                COMMENT "Bundling SynthlenKhmer.banks next to Standalone app")
        endif()
    endif()
else()
    message(STATUS "No SynthlenKhmer.banks pack found - skipping bundle step")
endif()
